--- a/index(1).html
+++ b/index(1).html
@@ -1,18 +1,10 @@
+The Light News
+Your source for real, inspiring stories and fresh updates.
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>The Light News</title>
+Welcome to The Light News
+This platform is built to enlighten minds, inform the public, and spread truth through the power of responsible journalism and engaging blog stories.
 
-  <!-- ✅ Google AdSense Script -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8666048817301568"
-     crossorigin="anonymous"></script>
+📌 Sample Blog Post
+Coming soon: Stay tuned for the latest updates and stories from The Light News editorial team.
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <h1>Welcome to The Light News</h1>
-  <p>Stay tuned for the latest updates, stories, and insights from around the world.</p>
-</body>
-</html>
+© 2025 The Light News. All rights reserved.
