--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>The Light News</title>
+
+  <!-- ✅ Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8666048817301568"
+     crossorigin="anonymous"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Light News - Index</title>
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header><h1>The Light News - Index</h1></header>
-  <main><p>This is the Index page.</p></main>
-  <footer><p>&copy; 2025 The Light News</p></footer>
+  <h1>Welcome to The Light News</h1>
+  <p>Stay tuned for the latest updates, stories, and insights from around the world.</p>
 </body>
 </html>
